feat: add my photo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="header">Header</div>
+    <header class="header">
+        <div class="start">
+        <h1 class="name">ANASTASIYA BUSKO</h1>
+        <img class="photo" src=photo.jpg alt="my photo">
+        </div>
+        <nav class="">
+            <a href="https://github.com/na1stya2">GITHUB </a>
+            <a href="https://discordapp.com/users/717633603407970380/">DISCORD</a>
+
+        </nav>
+    </header>
     <div class="main">Main</div>
     <div class="footer">Footer</div>
 </body>
