feat: add photo in  html fail

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="start">
         <h1 class="name">ANASTASIYA BUSKO</h1>
-        <img class="photo" src=photo.jpg alt="my photo">
+        <img class="photo" src=myphoto.jpg alt="my photo"  width=180>
         </div>
         <nav class="">
             <a href="https://github.com/na1stya2">GITHUB </a>
