feat: add links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,15 @@
         <h1 class="name">ANASTASIYA BUSKO</h1>
         <img class="photo" src=myphoto.jpg alt="my photo"  width=180>
         </div>
-        <nav class="">
-            <a href="https://github.com/na1stya2">GITHUB </a>
-            <a href="https://discordapp.com/users/717633603407970380/">DISCORD</a>
-
+        <nav class="contact"> Contact
+           <div> <a href="https://github.com/na1stya2">GITHUB </a></div>
+            <div><a href="https://discordapp.com/users/717633603407970380/">DISCORD</a></div>
         </nav>
     </header>
-    <div class="main">Main</div>
-    <div class="footer">Footer</div>
+    <footer>
+        <p>2022</p>
+        <a href="https://github.com/na1stya2" class="github-link">na1stya2</a>
+      </footer>
+    
 </body>
 </html>
