feat: add footer in html fail

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,21 +8,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <header class="header">
         <div class="start">
-        <h1 class="name">ANASTASIYA BUSKO</h1>
-        <img class="photo" src=myphoto.jpg alt="my photo"  width=180>
+            <h1 class="name">ANASTASIYA BUSKO</h1>
+            <img class="photo" src=myphoto.jpg alt="my photo" width=180>
         </div>
         <nav class="contact"> Contact
-           <div> <a href="https://github.com/na1stya2">GITHUB </a></div>
-            <div><a href="https://discordapp.com/users/717633603407970380/">DISCORD</a></div>
+            <ul class="nav-list"> 
+                <li><a href="https://github.com/na1stya2">GITHUB </a></li>
+                <li><a href="https://discordapp.com/users/717633603407970380/">DISCORD</a></li>
+            </ul>
         </nav>
     </header>
     <footer>
         <p>2022</p>
         <a href="https://github.com/na1stya2" class="github-link">na1stya2</a>
-      </footer>
-    
+        <p><a href="https://rs.school"><img src="https://app.rs.school/static/images/logo-rsschool3.png" width=50 alt="RS School"></a></p>
+    </footer>
+
 </body>
+
 </html>
