--- a/index.html
+++ b/index.html
@@ -7,25 +7,73 @@
     <link rel="stylesheet" href="style.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header class="header">
-        <div class="start">
+        <img class="photo" src=myphoto.jpg alt="my photo" width=180>
+        <div>
             <h1 class="name">ANASTASIYA BUSKO</h1>
-            <img class="photo" src=myphoto.jpg alt="my photo" width=180>
+            <nav class="contact">
+                <h4>CONTACT</h4>
+                <ul class="nav-list">
+                    <li><a href="https://github.com/na1stya2">GITHUB </a></li>
+                    <li><a href="https://discordapp.com/users/717633603407970380/">DISCORD</a></li>
+                </ul>
+            </nav>
         </div>
-        <nav class="contact"> Contact
-            <ul class="nav-list"> 
-                <li><a href="https://github.com/na1stya2">GITHUB </a></li>
-                <li><a href="https://discordapp.com/users/717633603407970380/">DISCORD</a></li>
-            </ul>
-        </nav>
     </header>
-    <footer>
-        <p>2022</p>
-        <a href="https://github.com/na1stya2" class="github-link">na1stya2</a>
-        <p><a href="https://rs.school"><img src="https://app.rs.school/static/images/logo-rsschool3.png" width=50 alt="RS School"></a></p>
+    <main class="container">
+        <section>
+            <h4>SUMMARY</h4>
+            <p>My name's Nastya. I'm studying at RS School frontend development now. I'm just started learning to
+                programming.</p>
+        </section>
+        <section>
+            <h4>SKILLS</h4>
+            <ul>
+                <li>CSS</li>
+                <li>HTML</li>
+            </ul>
+        </section>
+        <section>
+            <h4>CODE EXAMPLE</h4>
+            <pre>
+                <code>
+ function greet () {
+    return 'hello world!';
+    }
+    greet();
+                </code>
+              </pre>
+        </section>
+        <section>
+            <h4>EXPERIENCE</h4>
+            <a href="https://na1stya2.github.io/rsschool-cv/">CV</a>
+        </section>
+        <section>
+            <h4>EDUCATION</h4>
+            <ul>
+                <li>HTML Academy</li>
+                <li>Code Basics HTML</li>
+                <li>Code Basics CSS</li>
+            </ul>   
+        </section>
+        <section>
+            <h4>LANGUAGES</h4>
+            <ul>
+                <li>English - A2</li>
+            </ul>
+        </section>
+    </main>
+    <footer class="container">
+        <h4>2022</h4>
+        <p><a href="https://github.com/na1stya2" class="github-link"> <img src="https://img2.freepng.ru/20180802/lys/kisspng-github-microsoft-corporation-version-control-repos-bn1975-5b62b038d4aee2.6435670115331942968712.jpg" width=70></a></p>
+        <p><a href="https://rs.school"><img src="https://app.rs.school/static/images/logo-rsschool3.png" width=130
+                    alt="RS School"></a></p>
     </footer>
 
 </body>
