feat: change link

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     </main>
     <footer class="container">
         
-        <p><a href="https://github.com/na1stya2" class="github-link"> <img src="https://img2.freepng.ru/20180802/lys/kisspng-github-microsoft-corporation-version-control-repos-bn1975-5b62b038d4aee2.6435670115331942968712.jpg" alt="na1stya2" width=70></a></p>
+        <p><a href="https://github.com/na1stya2" class="github-link"> <img src="https://img2.freepng.ru/20180802/lys/kisspng-github-microsoft-corporation-version-control-repos-bn1975-5b62b038d4aee2.6435670115331942968712.jpg" alt="NA1STYA2" width=70></a></p>
         <h4>2022</h4>
         <p><a href="https://rs.school"><img src="https://app.rs.school/static/images/logo-rsschool3.png" width=130
                     alt="RS School"></a></p>
